Closed Bug 1626903 Opened 5 years ago Closed 5 years ago

Perma build bustages /builds/worker/checkouts/gecko/js/src/wasm/WasmInstance.cpp:140:14: error: use of undeclared identifier 'ENABLE_WASM_BIGINT' when Gecko 76 merges to Beta on 2020-04-06

Categories

(Core :: JavaScript: WebAssembly, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla76
Tracking Status
firefox-esr68 --- unaffected
firefox74 --- unaffected
firefox75 --- unaffected
firefox76 blocking verified

People

(Reporter: dvarga, Assigned: wingo)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Central as beta simulation

Treeherder link:
https://treeherder.mozilla.org/#/jobs?repo=try&resultStatus=testfailed%2Cbusted%2Cexception%2Cretry%2Cusercancel%2Crunnable&revision=e1e52b33b20d49d72b6070b50f55650e13414183&selectedJob=295908821

Run 2 with the backout for Bug 1622828, Bug 1625885:
https://treeherder.mozilla.org/#/jobs?repo=try&resultStatus=testfailed%2Cbusted%2Cexception%2Cretry%2Cusercancel%2Crunnable&revision=0e7e5ca935830ff1b228d8bc35a3d0dea1d3dfbc

Failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=295908821&repo=try&lineNumber=10285

[task 2020-04-02T10:15:01.772Z] 10:15:01     INFO -  make[4]: Leaving directory '/builds/worker/workspace/obj-build/media/libaom'
[task 2020-04-02T10:15:01.788Z] 10:15:01     INFO -  make[4]: Entering directory '/builds/worker/workspace/obj-build/config/external/icu/common'
[task 2020-04-02T10:15:01.788Z] 10:15:01     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang++ -std=gnu++17 -m32 -o unistr_case_locale.o -c  -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DDEBUG=1 -DU_COMMON_IMPLEMENTATION -DU_USING_ICU_NAMESPACE=0 -DU_NO_DEFAULT_INCLUDE_UTF_HEADERS=1 -DU_HIDE_OBSOLETE_UTF_OLD_H=1 -DUCONFIG_NO_LEGACY_CONVERSION -DUCONFIG_NO_TRANSLITERATION -DUCONFIG_NO_REGULAR_EXPRESSIONS -DU_CHARSET_IS_UTF8 -DUNISTR_FROM_CHAR_EXPLICIT=explicit -DUNISTR_FROM_STRING_EXPLICIT=explicit -DU_HAVE_NL_LANGINFO_CODESET=0 -DU_DEBUG=1 -I/builds/worker/checkouts/gecko/config/external/icu/common -I/builds/worker/workspace/obj-build/config/external/icu/common -I/builds/worker/checkouts/gecko/intl/icu/source/i18n -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Werror=non-literal-null-conversion -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Wno-unknown-warning-option -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fcrash-diagnostics-dir=/builds/worker/artifacts -march=pentium-m -msse -msse2 -mfpmath=sse -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -Os -fno-omit-frame-pointer -funwind-tables -Wno-deprecated-declarations -Wno-type-limits -Wno-unused-but-set-variable -Wno-unused-function -Wno-sign-compare -Wno-maybe-uninitialized -frtti -fexperimental-new-pass-manager  -MD -MP -MF .deps/unistr_case_locale.o.pp   /builds/worker/checkouts/gecko/intl/icu/source/common/unistr_case_locale.cpp
[task 2020-04-02T10:15:01.788Z] 10:15:01     INFO -  make[4]: Leaving directory '/builds/worker/workspace/obj-build/config/external/icu/common'
[task 2020-04-02T10:15:01.792Z] 10:15:01     INFO -  make[4]: Entering directory '/builds/worker/workspace/obj-build/config/external/icu/common'
[task 2020-04-02T10:15:01.792Z] 10:15:01     INFO -  config/external/icu/common/unistr_cnv.o
[task 2020-04-02T10:15:01.792Z] 10:15:01     INFO -  make[4]: Leaving directory '/builds/worker/workspace/obj-build/config/external/icu/common'
[task 2020-04-02T10:15:01.820Z] 10:15:01     INFO -  make[4]: Entering directory '/builds/worker/workspace/obj-build/js/src/wasm'
[task 2020-04-02T10:15:01.821Z] 10:15:01     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang++ -std=gnu++17 -m32 -o Unified_cpp_js_src_wasm1.o -c  -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DDEBUG=1 -DJS_CACHEIR_SPEW -DJS_STRUCTURED_SPEW -DJS_HAS_CTYPES -DFFI_BUILDING -DEXPORT_JS_API -DMOZ_HAS_MOZGLUE -I/builds/worker/checkouts/gecko/js/src/wasm -I/builds/worker/workspace/obj-build/js/src/wasm -I/builds/worker/workspace/obj-build/js/src -I/builds/worker/checkouts/gecko/js/src -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -fPIC -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/js/src/js-confdefs.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Werror=non-literal-null-conversion -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Wno-noexcept-type -Wno-unknown-warning-option -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fcrash-diagnostics-dir=/builds/worker/artifacts -march=pentium-m -msse -msse2 -mfpmath=sse -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O3 -fno-omit-frame-pointer -funwind-tables -Werror -fno-strict-aliasing -Werror=format -Wno-shadow -fexperimental-new-pass-manager  -MD -MP -MF .deps/Unified_cpp_js_src_wasm1.o.pp   Unified_cpp_js_src_wasm1.cpp
[task 2020-04-02T10:15:01.822Z] 10:15:01     INFO -  In file included from Unified_cpp_js_src_wasm1.cpp:29:
[task 2020-04-02T10:15:01.822Z] 10:15:01    ERROR -  /builds/worker/checkouts/gecko/js/src/wasm/WasmInstance.cpp:140:14: error: use of undeclared identifier 'ENABLE_WASM_BIGINT'
[task 2020-04-02T10:15:01.822Z] 10:15:01     INFO -    MOZ_ASSERT(ENABLE_WASM_BIGINT);
[task 2020-04-02T10:15:01.822Z] 10:15:01     INFO -               ^
[task 2020-04-02T10:15:01.823Z] 10:15:01    ERROR -  /builds/worker/checkouts/gecko/js/src/wasm/WasmInstance.cpp:140:14: error: use of undeclared identifier 'ENABLE_WASM_BIGINT'
[task 2020-04-02T10:15:01.824Z] 10:15:01     INFO -  2 errors generated.
[task 2020-04-02T10:15:01.824Z] 10:15:01     INFO -  /builds/worker/checkouts/gecko/config/rules.mk:750: recipe for target 'Unified_cpp_js_src_wasm1.o' failed
[task 2020-04-02T10:15:01.824Z] 10:15:01    ERROR -  make[4]: *** [Unified_cpp_js_src_wasm1.o] Error 1
[task 2020-04-02T10:15:01.824Z] 10:15:01     INFO -  make[4]: Leaving directory '/builds/worker/workspace/obj-build/js/src/wasm'
[task 2020-04-02T10:15:01.824Z] 10:15:01     INFO -  /builds/worker/checkouts/gecko/config/recurse.mk:74: recipe for target 'js/src/wasm/target-objects' failed
[task 2020-04-02T10:15:01.825Z] 10:15:01    ERROR -  make[3]: *** [js/src/wasm/target-objects] Error 2
[task 2020-04-02T10:15:01.825Z] 10:15:01     INFO -  make[3]: *** Waiting for unfinished jobs....
[task 2020-04-02T10:15:01.861Z] 10:15:01     INFO -  make[4]: Entering directory '/builds/worker/workspace/obj-build/media/libvpx'
[task 2020-04-02T10:15:01.861Z] 10:15:01     INFO -  media/libvpx/temporal_filter.o
[task 2020-04-02T10:15:01.861Z] 10:15:01     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang -std=gnu99 -m32 -o temporal_filter.o -c  -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DDEBUG=1 -DHAVE_CONFIG_H=vpx_config.h -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/media/libvpx -I/builds/worker/workspace/obj-build/media/libvpx -I/builds/worker/checkouts/gecko/media/libvpx/config/linux/ia32 -I/builds/worker/checkouts/gecko/media/libvpx/config -I/builds/worker/checkouts/gecko/media/libvpx/libvpx -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -fPIC -include /builds/worker/workspace/obj-build/mozilla-config.h -DMOZILLA_CLIENT -Qunused-arguments -fcrash-diagnostics-dir=/builds/worker/artifacts -march=pentium-m -msse -msse2 -mfpmath=sse -fno-strict-aliasing -ffunction-sections -fdata-sections -fno-math-errno -pthread -fPIC -pipe -g -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -Os -fno-omit-frame-pointer -funwind-tables -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wclass-varargs -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Werror=non-literal-null-conversion -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Wno-sign-compare -Wno-unused-function -Wno-unreachable-code -Wno-unneeded-internal-declaration -fexperimental-new-pass-manager  -MD -MP -MF .deps/temporal_filter.o.pp   /builds/worker/checkouts/gecko/media/libvpx/libvpx/vp8/encoder/temporal_filter.c
[task 2020-04-02T10:15:01.861Z] 10:15:01     INFO -  make[4]: Leaving directory '/builds/worker/workspace/obj-build/media/libvpx'
[task 2020-04-02T10:15:01.917Z] 10:15:01     INFO -  make[4]: Entering directory '/builds/worker/workspace/obj-build/media/libjpeg'
[task 2020-04-02T10:15:01.917Z] 10:15:01     INFO -  media/libjpeg/jdsample-avx2.o
[task 2020-04-02T10:15:01.917Z] 10:15:01     INFO -  /usr/bin/yasm -o jdsample-avx2.o -f elf32 -rnasm -pnasm -g dwarf2 -DPIC -DELF -I/builds/worker/checkouts/gecko/media/libjpeg/simd/nasm/ -I/builds/worker/checkouts/gecko/media/libjpeg/simd/i386/   /builds/worker/checkouts/gecko/media/libjpeg/simd/i386/jdsample-avx2.asm
[task 2020-04-02T10:15:01.917Z] 10:15:01     INFO -  make[4]: Leaving directory '/builds/worker/workspace/obj-build/media/libjpeg'
[task 2020-04-02T10:15:01.953Z] 10:15:01     INFO -  make[4]: Entering directory '/builds/worker/workspace/obj-build/media/libaom'
[task 2020-04-02T10:15:01.953Z] 10:15:01     INFO -  media/libaom/aom_subpixel_8t_intrin_ssse3.o
[task 2020-04-02T10:15:01.953Z] 10:15:01     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang -std=gnu99 -m32 -o aom_subpixel_8t_intrin_ssse3.o -c  -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DDEBUG=1 -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/media/libaom -I/builds/worker/workspace/obj-build/media/libaom -I/builds/worker/checkouts/gecko/media/libaom/config/linux/ia32 -I/builds/worker/checkouts/gecko/media/libaom/config -I/builds/worker/checkouts/gecko/third_party/aom -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -fPIC -include /builds/worker/workspace/obj-build/mozilla-config.h -DMOZILLA_CLIENT -Qunused-arguments -fcrash-diagnostics-dir=/builds/worker/artifacts -march=pentium-m -msse -msse2 -mfpmath=sse -fno-strict-aliasing -ffunction-sections -fdata-sections -fno-math-errno -pthread -fPIC -pipe -g -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -Os -fno-omit-frame-pointer -funwind-tables -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wclass-varargs -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Werror=non-literal-null-conversion -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Wno-sign-compare -Wno-unused-function -Wno-unreachable-code -Wno-unneeded-internal-declaration -fexperimental-new-pass-manager  -MD -MP -MF .deps/aom_subpixel_8t_intrin_ssse3.o.pp  -mssse3 /builds/worker/checkouts/gecko/third_party/aom/aom_dsp/x86/aom_subpixel_8t_intrin_ssse3.c
[task 2020-04-02T10:15:01.954Z] 10:15:01     INFO -  make[4]: Leaving directory '/builds/worker/workspace/obj-build/media/libaom'
[task 2020-04-02T10:15:01.997Z] 10:15:01     INFO -  make[4]: Entering directory '/builds/worker/workspace/obj-build/media/libjpeg'
[task 2020-04-02T10:15:01.997Z] 10:15:01     INFO -  media/libjpeg/jdsample-mmx.o
[task 2020-04-02T10:15:01.998Z] 10:15:01     INFO -  /usr/bin/yasm -o jdsample-mmx.o -f elf32 -rnasm -pnasm -g dwarf2 -DPIC -DELF -I/builds/worker/checkouts/gecko/media/libjpeg/simd/nasm/ -I/builds/worker/checkouts/gecko/media/libjpeg/simd/i386/   /builds/worker/checkouts/gecko/media/libjpeg/simd/i386/jdsample-mmx.asm
[task 2020-04-02T10:15:01.999Z] 10:15:01     INFO -  make[4]: Leaving directory '/builds/worker/workspace/obj-build/media/libjpeg'
Flags: needinfo?(wingo)

Thanks, will fix.

Assignee: nobody → wingo
Flags: needinfo?(wingo)
Pushed by dluca@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/aa225c520523 Fix build when ENABLE_WASM_BIGINT is not defined r=lth
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
Has Regression Range: --- → yes
Keywords: regression
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: