Bug 1626903 - Fix build when ENABLE_WASM_BIGINT is not defined r=lth

Differential Revision: https://phabricator.services.mozilla.com/D69354

--HG--
extra : moz-landing-system : lando